--- a/src/app/Components/reusable-components/table-grid/table-grid.component.html
+++ b/src/app/Components/reusable-components/table-grid/table-grid.component.html
@@ -37,6 +37,6 @@
 </div>
 <p *ngIf="_tableData">Total Results : {{_tableData.length}}</p>
 
-<div *ngIf="toogle_pop_comp">
+<!-- <div *ngIf="toogle_pop_comp">
   <app-popup-window [availableFields]="storedFields" [TotalavailableFields]="Total_Available_fields" (masterArray)="masterArrayHandler($event)"></app-popup-window>
-</div>
+</div> -->
