--- a/src/app/Components/stores-navbar/allstores/allstores.component.html
+++ b/src/app/Components/stores-navbar/allstores/allstores.component.html
@@ -1,6 +1,7 @@
 <h3 id="allstores-title">All Stores</h3>
 <input class="navbar-two-input allstore-search" placeholder="Select Category" style="float: right;" />
 <div class="content-wrapper">
+    <advance-filter [input]="advanceFilterConfig" (output)="filterAdvanceData($event)"></advance-filter>
     <input-filter [input]="filterConfig" (output)="filterData($event)"></input-filter>
     <div class="grid">
         <table-grid [collection]="storesCollection" [config]="tableConfig" (fieldsDisplayed)="fieldsDisplayed($event)"></table-grid>
